@@ -3,6 +3,8 @@
     Country tests.
 """
 
+import doctest
+from doctest import DocTestSuite
 import unittest
 
 import plone.i18n.locales
@@ -13,14 +15,14 @@ import zope.component
 from zope.component import queryUtility
 from zope.component.testing import setUp, tearDown
 from zope.configuration.xmlconfig import XMLConfig
-from zope.testing import doctest
-from zope.testing.doctestunit import DocTestSuite
+
 
 def configurationSetUp(self):
     setUp()
     XMLConfig('meta.zcml', zope.component)()
     XMLConfig('meta.zcml', zope.app.publisher.browser)()
     XMLConfig('configure.zcml', plone.i18n.locales)()
+
 
 def testAvailableCountries():
     """
@@ -54,6 +56,7 @@ def testAvailableCountries():
       True
     """
 
+
 def test_suite():
     return unittest.TestSuite((
         DocTestSuite('plone.i18n.locales.countries'),
@@ -61,6 +64,3 @@ def test_suite():
                      tearDown=tearDown,
                      optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
         ))
-
-if __name__ == '__main__':
-    unittest.main(defaultTest="test_suite")
