@@ -3,6 +3,8 @@
     Languages tests.
 """
 
+import doctest
+from doctest import DocTestSuite
 import unittest
 
 import plone.i18n.locales
@@ -14,14 +16,14 @@ import zope.component
 from zope.component import queryUtility
 from zope.component.testing import setUp, tearDown
 from zope.configuration.xmlconfig import XMLConfig
-from zope.testing import doctest
-from zope.testing.doctestunit import DocTestSuite
+
 
 def configurationSetUp(self):
     setUp()
     XMLConfig('meta.zcml', zope.component)()
     XMLConfig('meta.zcml', zope.app.publisher.browser)()
     XMLConfig('configure.zcml', plone.i18n.locales)()
+
 
 def testContentLanguageAvailability():
     """
@@ -72,6 +74,7 @@ def testContentLanguageAvailability():
       >>> pt_BR[u'name']
       u'Portuguese (Brazil)'
     """
+
 
 def testMetadataLanguageAvailability():
     """
@@ -145,6 +148,3 @@ def test_suite():
                      tearDown=tearDown,
                      optionflags=doctest.ELLIPSIS | doctest.NORMALIZE_WHITESPACE),
         ))
-
-if __name__ == '__main__':
-    unittest.main(defaultTest="test_suite")
